--- a/mluStatusStyles.css
+++ b/mluStatusStyles.css
@@ -21,3 +21,15 @@
     background-color: rgb(0, 0, 119);
     padding: 5px;
 }
+
+.catalog{
+    color: white;
+    background-color: darkmagenta;
+    padding: 5px;
+}
+
+.no-catalog{
+    color: white;
+    background-color:rgb(16, 156, 181);
+    padding: 5px;
+}
